# project_AI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/app/: main.py  routes.py
data/: Dockerfile  books.db  init.sh  login.db
fastapi_app/: Dockerfile  pyproject.toml
fastapi_app/app/: __init__.py  config.py  database.py  main.py  models.py
fastapi_app/app/domain/: entities.py
fastapi_app/app/models/: schemas.py
fastapi_app/app/repositories/: prediction_repository.py
fastapi_app/app/routers/: health.py  model_info.py  predict.py
fastapi_app/app/services/: model_service.py  prediction_service.py
flask_app/: Dockerfile  pyproject.toml
flask_app/app/: __init__.py  config.py  models.py
flask_app/app/domain/: entities.py  interfaces.py
flask_app/app/repositories/: prediction_repository.py  user_repository.py
flask_app/app/routes/: __init__.py  admin.py  auth.py  history.py  main.py
flask_app/app/services/: auth_service.py  book_service.py  ml_client.py  prediction_service.py  user_service.py
flask_app/app/templates/: admin.html  base.html  edit_book.html  edit_user.html  history.html  index.html  login.html  register.html
ml/: Dockerfile  pyproject.toml
ml/app/: main.py  recommender.py
model/: Dockerfile  requirements.txt
model/app/: main.py
web/: Dockerfile  pyproject.toml  requirements.txt
web/app/: admin.py  auth.py  main.py
web/app/static/: style.css
web/app/templates/: admin.html  edit_book.html  index.html  login.html  profile.html  register.html
