[project]
name = "flask_app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-wtf>=1.2.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "bcrypt>=4.0.0",
    "gunicorn>=21.0.0",
    "httpx>=0.27.0",           
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]